fixtures/cs-cmp-01/good/author-vs-publisher.ts
import crypto from "crypto";

export function compareAuthors(author: string, publisher: string) {
	return author === publisher;
}

void crypto;
