fixtures/cs-cmp-01/bad/hash-compare-with-crypto-import.ts
import crypto from "crypto";

export function matches(hash: string, computedHash: string) {
	return hash === computedHash;
}

void crypto;
